feat: add test in gradle